--- a/package.json
+++ b/package.json
@@ -3,10 +3,14 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "main": "main.jsx",
   "scripts": {
+    "start": "vite",
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "electron-start": "electron .",
+    "electron-build": "npm run build && electron ."
   },
   "dependencies": {
     "@hello-pangea/dnd": "^16.2.0",
@@ -21,6 +25,8 @@
     "@types/react-dom": "^18.0.11",
     "@vitejs/plugin-react": "^3.1.0",
     "autoprefixer": "^10.4.14",
+    "electron": "^24.0.0",
+    "electron-is-dev": "^2.0.0",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.3.0",
     "vite": "^4.2.0"
