--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "main": "main.jsx",
+  "main": "./src/electron/main.jsx",
   "scripts": {
-    "start": "vite",
+    "start": "concurrently \"npm run dev\" \"npm run electron-start\"",
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
@@ -26,6 +26,7 @@
     "@types/react-dom": "^18.0.11",
     "@vitejs/plugin-react": "^3.1.0",
     "autoprefixer": "^10.4.14",
+    "concurrently": "^8.0.1",
     "electron": "^24.0.0",
     "electron-is-dev": "^2.0.0",
     "postcss": "^8.4.21",
