--- a/package.json
+++ b/package.json
@@ -15,11 +15,10 @@
   "dependencies": {
     "@hello-pangea/dnd": "^16.2.0",
     "@reduxjs/toolkit": "^1.9.3",
-    "pg": "^8.10.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
-    "uuid": "^9.0.0"
+    "sqlite3": "^5.1.6"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
