sqlite3 connection on app start and migration implemented

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "main": "./src/electron/main.jsx",
+  "main": "./electron/main.jsx",
   "scripts": {
     "start": "concurrently \"npm run dev\" \"npm run electron-start\"",
     "dev": "vite",
@@ -18,7 +18,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
-    "sqlite3": "^5.1.6"
+    "sqlite3": "^5.1.6",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
