--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
+    "sequelize": "^6.31.0",
     "sqlite3": "^5.1.6",
     "uuid": "^9.0.0"
   },
